[gd_scene load_steps=6 format=3 uid="uid://cuo51ovm80pha"]

[ext_resource type="Script" path="res://Scripts/UI/OptionSliders.gd" id="1_6ii13"]
[ext_resource type="Texture2D" uid="uid://clgmgjlrdsot0" path="res://Assets/Graphics/UI/Game Volume.png" id="2_1masp"]
[ext_resource type="Texture2D" uid="uid://ci4gtorbgcl3q" path="res://Assets/Graphics/UI/Back.png" id="2_kxuu0"]
[ext_resource type="AudioStream" uid="uid://jxkadcbiu5q6" path="res://Assets/Audio/Click.wav" id="2_wbt4c"]
[ext_resource type="Texture2D" uid="uid://dgeuitcsncikl" path="res://Assets/Graphics/UI/SFX Volume.png" id="3_w3wke"]

[node name="Options" type="AspectRatioContainer" node_paths=PackedStringArray("MusicSlider", "SFXSlider")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 1.75
script = ExtResource("1_6ii13")
scenePath = "res://Scenes/UI/main_menu.tscn"
MusicSlider = NodePath("MarginContainer/HBoxContainer/Music Volume Container/MusicSlider")
SFXSlider = NodePath("MarginContainer/HBoxContainer/SFX Container/SFXSlider")

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_wbt4c")
volume_db = 12.0
bus = &"SFX"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 160
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 160
theme_override_constants/margin_bottom = 80

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Music Volume Container" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Music Volume" type="TextureRect" parent="MarginContainer/HBoxContainer/Music Volume Container"]
layout_mode = 2
texture = ExtResource("2_1masp")
stretch_mode = 2

[node name="MusicSlider" type="HSlider" parent="MarginContainer/HBoxContainer/Music Volume Container"]
layout_mode = 2
min_value = -30.0
max_value = 0.0

[node name="SFX Container" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/SFX Container"]
layout_mode = 2
texture = ExtResource("3_w3wke")

[node name="SFXSlider" type="HSlider" parent="MarginContainer/HBoxContainer/SFX Container"]
layout_mode = 2
min_value = -30.0
max_value = 0.0

[node name="Back" type="TextureButton" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
texture_normal = ExtResource("2_kxuu0")

[connection signal="value_changed" from="MarginContainer/HBoxContainer/Music Volume Container/MusicSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/SFX Container/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/Back" to="." method="_on_back_pressed"]
